# job-application-tracker-with-mongodb

./: .gitignore  README.md  main.py  pyproject.toml  sample_job_description.txt  sample_resume.txt  setup.md  test_resume_api.py  test_resume_matcher.py
app/ai/: resume_matcher.py
app/api/: router.py
app/api/routes/: applications.py  resume.py
app/api/v1/: applications.py  resume_analysis.py
app/core/: config.py
app/database/: mongodb.py
app/repositories/: application_repository.py  resume_analysis_repository.py
app/schemas/: application.py  resume_analysis.py  resume_analysis_history.py  resume_request.py
app/services/: resume_analysis_service.py  resume_parser.py
tests/: conftest.py  test_applications.py
