[project]
name = "job-application-tracker-with-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
